--- a/public/static/frontend/css/style-dark.css
+++ b/public/static/frontend/css/style-dark.css
@@ -5091,6 +5091,8 @@ input[type='button'].btn-block
     padding-left: 1.25rem;
 }
 
+.grecaptcha-badge { visibility: hidden; }
+
 .custom-select-lg
 {
     font-size: 1rem; 
