--- a/public/static/frontend/css/style-dark.css
+++ b/public/static/frontend/css/style-dark.css
@@ -5091,7 +5091,7 @@ input[type='button'].btn-block
     padding-left: 1.25rem;
 }
 
-.grecaptcha-badge { visibility: hidden; }
+/* .grecaptcha-badge { visibility: hidden; } */
 
 .custom-select-lg
 {
